fix regex editor covering controls on small screens

--- a/src/main/sass/app.scss
+++ b/src/main/sass/app.scss
@@ -144,6 +144,7 @@ html, body {
     max-width: 800px;
     height: 32px + (2 * 4px);
     left: -$cm-padding;
+    margin-right: 250px;
     font-size: $font-size-large;
     line-height: 32px;
     color: $color-gray;
